--- a/frontend/package.json
+++ b/frontend/package.json
@@ -23,7 +23,8 @@
     "react-dom": "^17.0.2",
     "react-scripts": "5.0.0",
     "styled-components": "^5.3.3",
-    "typescript": "^4.4.2"
+    "typescript": "^4.4.2",
+    "yarn": "^1.22.21"
   },
   "scripts": {
     "start": "react-scripts start",
