--- a/package.json
+++ b/package.json
@@ -43,5 +43,11 @@
     "lint": "",
     "lint:fix": "",
     "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "dependencies": {
+    "@fortawesome/fontawesome-free": "^6.4.2",
+    "@material-ui/core": "^4.12.4",
+    "react-file-reader": "^1.1.4",
+    "react-icons": "^4.12.0"
   }
 }
